add trip and lockout actions for HvdcLines